--- a/website/src/css/logo.css
+++ b/website/src/css/logo.css
@@ -7,10 +7,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  container-type: size;
-  width: clamp(180px, 12cqw, 360px);
-  height: clamp(180px, 15cqh, 360px);
-  gap: 2cqh;
+  width: max(15vw, 180px);
+  gap: 20px;
   z-index: 100;
 }
 
@@ -26,7 +24,7 @@
 }
 
 .logo-wrapper {
-  --border-radius: 24cqw;
+  --border-radius: 72px;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -118,35 +116,8 @@
 
 .download {
   width: 100%;
-  height: 100%;
-  padding: 1.75rem 0.25rem;
-  border: none;
-  color: white;
-  font-family: monospace;
-  font-size: 12cqw;
-  text-align: center;
-  transition: all 0.2s ease;
-  white-space: nowrap;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  animation: pulse 2s infinite ease-in-out;
 
-  background-image:
-   url("../assets/pill/center.png"),
-   url("../assets/pill/left.png"),
-   url("../assets/pill/right.png");
-
-  background-repeat: no-repeat, no-repeat, no-repeat;
-
-  background-position: clamp(40px, 20cqw, 120px) center, 1px center,
-    calc(100% - 1px) center;
-
-  background-size: calc(100% - clamp(80px, 40cqw, 240px)) 100%,
-    clamp(40px, 20cqw, 120px) 100%, clamp(40px, 20cqw, 120px) 100%;
-
-  &:hover { 
+  &:hover {
     transform: scale(0.95);
     transition: all 0.5s ease-in;
     animation: pulse 2s infinite ease-in-out;
@@ -182,21 +153,6 @@
   }
   50% {
     transform: scale(1.05);
-  }
-}
-
-@keyframes speakers {
-  0%,
-  100% {
-    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-size='24'%3E🔈%3C/text%3E%3C/svg%3E"), auto;
-  }
-  33% {
-    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-size='24'%3E🔉%3C/text%3E%3C/svg%3E"),
-      auto;
-  }
-  66% {
-    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-size='24'%3E🔊%3C/text%3E%3C/svg%3E"),
-      auto;
   }
 }
 
@@ -243,10 +199,10 @@
 
 body {
   animation: loading-cursor .5s forwards infinite;
-  &.dragging { 
+  &.dragging {
     animation: none;
     cursor: move;
-    
+
     & * {
       cursor: move;
     }
