--- a/www/src/style.css
+++ b/www/src/style.css
@@ -157,7 +157,6 @@ body.dragging * {
   inset: 0;
   width: 100%;
   height: 100svh;
-  z-index: 100;
 }
 
 .google-play-qr {
@@ -165,7 +164,7 @@ body.dragging * {
   height: 64px;
   position: absolute;
   bottom: 20px;
-  right: 20px;
+  left: 20px;
   object-fit: contain;
   display: none;
 }
@@ -175,7 +174,7 @@ body.dragging * {
   height: 40px;
   position: absolute;
   bottom: 20px;
-  right: 20px;
+  left: 20px;
   object-fit: contain;
 }
 
@@ -184,7 +183,7 @@ body.dragging * {
   height: 64px;
   position: absolute;
   bottom: 20px;
-  left: 20px;
+  right: 20px;
   display: none;
 }
 
@@ -193,7 +192,7 @@ body.dragging * {
   height: 40px;
   position: absolute;
   bottom: 20px;
-  left: 20px;
+  right: 20px;
 }
 
 @media (min-width: 512px) {
@@ -309,13 +308,57 @@ body.dragging * {
 }
 
 .logo-section {
+  --logo-size: min(25vw, 180px);
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: min(30vw, 180px);
-  height: min(30vw, 180px);
+  width: var(--logo-size);
+  height: var(--logo-size);
   z-index: 100;
+}
+
+.logo-section::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: calc(var(--logo-size) * 1.45);
+  height: calc(var(--logo-size) * 1.45);
+  transform: translate(-50%, -50%) rotate(0deg);
+  z-index: 0;
+  border-radius: 50%;
+  background: linear-gradient(
+    to right,
+    #ff00cc 0%,
+    #3333ff 25%,
+    #ff00a6 50%,
+    #0116ff 75%,
+    #ff00cc 100%
+  );
+  filter: blur(60px) brightness(200%) saturate(200%);
+  opacity: 1;
+  animation: rotateTheGlow 3s linear infinite,
+    hueShiftTheGlow 3s linear infinite;
+  pointer-events: none;
+}
+
+@keyframes rotateTheGlow {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+@keyframes hueShiftTheGlow {
+  0% {
+    filter: blur(60px) brightness(200%) saturate(200%);
+  }
+  100% {
+    filter: blur(60px) brightness(200%) saturate(200%);
+  }
 }
 
 .logo-stack {
